Fixed gap for footer, and overflow of logo title

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,8 +12,8 @@ body, html {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: var(--color-white);
+    overflow-x: hidden;
 }
-
 header {
     z-index: 1;
     display: flex;
@@ -66,6 +66,7 @@ nav ul li a:hover {
 .container {
     display: flex;
     justify-content: space-between;
+    min-height: 35vh;
 }
 
 aside {
@@ -82,10 +83,12 @@ aside {
 main {
     flex: 4;
     padding: 20px;
+    width: 90%;
     background-color: var(--color-white);
 }
 
 footer {
+    bottom: 0;
     background-color: var(--color-dark);
     color: var(--color-white);
     text-align: center;
@@ -96,7 +99,6 @@ footer {
 }
 
 #Menu{
-    width: 50%;
     text-align: end;
 }
 
@@ -104,7 +106,6 @@ footer {
     display: flex;
     text-decoration: none;
     color: var(--color-white);
-    width: 50%;
 }
 
 #Logo img{
@@ -161,6 +162,12 @@ footer {
         padding: 0;
         width: 100vw;
         text-align: center;
+    }
+    #Logo{
+        width: 95%;
+    }
+    #Menu{
+        width: 5%;
     }
 }
 
